2008-08-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Use automatic properties for all
	Threadhold properties. Reuse (i.e. Clear) 'targets' between rule
	executions (to reduce memory requirements).
	* ConsiderUsingStopwatchRule.cs: Use new rocks to simplify code.
	Rework parameter checks to consider Ref and Out parameters.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsiderUsingStopwatchRule.cs: New. Rule to check if the use of
	DateTime could not be replaced with the use of a Stopwatch to 
	increase the code clarity. [committed for Cedric Vivier]
	* Gendarme.Rules.Maintainability.mdp: Update MD project files.
	* Makefile.am:  Add the rule and the test to the build.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnnecessarySpecializationRule.cs: New. Rule to check if some
	method parameters could use a type lower in the hierarchy than the one 
	being used. [committed for Cedric Vivier]
	* Gendarme.Rules.Maintainability.mdp: Update MD project files.
	* Makefile.am:  Add the rule and the test to the build.

2008-07-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepInheritanceTreeRule.cs: Change the default rule behaviour
	to check only inheritance inside the set of assemblies being analyzed
	(instead of the whole resolvable class libraries). This can be
	changed back using the configuration file. Patch by Cedric Vivier.

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidComplexMethodsRule.cs: Always report the calculated CC 
	since it is useful to the end user (to see how much complexity 
	there is ;-)
	* AvoidLackOfCohesionOfMethodsRule.cs: Always report the 
	calculated cohesion (for the same reasons).
	* Makefile.am: Start using ../common.make

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferStringIsNullOrEmptyRule.cs: New. Rule to suggest using
	String.IsNullOrEmpty over a null and length check on the same string
	[Fix bug/request #362867]